src/objects/Apttus__DocAssemblyRule__c.object
<CustomObject>
    <description>Represents a single rule in a document assembly ruleset</description>
    <fields>
        <fullName>Apttus_Proposal__Proposal_Category__c</fullName>
        <description>The quote/proposal category</description>
        <inlineHelpText>The quote/proposal category</inlineHelpText>
        <label>Proposal Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the rule is active</description>
        <inlineHelpText>Indicates whether the rule is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Agreement_Category__c</fullName>
        <description>The agreement category to match.</description>
        <inlineHelpText>The agreement category to match.</inlineHelpText>
        <label>Agreement Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The description for the rule</description>
        <inlineHelpText>The description for the rule</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__RulesetId__c</fullName>
        <description>ID of the associated rule set</description>
        <inlineHelpText>ID of the associated rule set</inlineHelpText>
        <label>Ruleset</label>
        <referenceTo>Apttus__DocAssemblyRuleset__c</referenceTo>
        <relationshipName>SectionRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>The rule evaluation sequence</description>
        <inlineHelpText>The rule evaluation sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique id used for migrating Doc Assembly Rule records from external systems (e.g. during acquisition loads)</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TPA_Purpose_Picklist_Apttus_Fr__c</fullName>
        <description>TPA-MC-ESPSFDCTPA-2884</description>
        <label>TPA Purpose Picklist Apttus Fr</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANALYSE QUANTITATIVE</fullName>
                </value>
                <value>
                    <fullName>GESTION DES RISQUES / SURVEILLANCE DE LA SÉCURITÉ</fullName>
                </value>
                <value>
                    <fullName>SEGMENTATION ET CIBLAGE DE LA FORCE DE VENTE</fullName>
                </value>
                <value>
                    <fullName>TAILLE ET STRUCTURE DE LA FORCE DE VENTE</fullName>
                </value>
                <value>
                    <fullName>PRÉVISIONS DES VENTES</fullName>
                </value>
                <value>
                    <fullName>RAPPORTS DE VENTES</fullName>
                </value>
                <value>
                    <fullName>LA MISE EN ŒUVRE DE L&apos;APPLICATION LOGICIELLE</fullName>
                </value>
                <value>
                    <fullName>SOURCE DE SUIVI DE L’ACTIVITÉ</fullName>
                </value>
                <value>
                    <fullName>SEGMENTATION DES PARTIES PRENANTES</fullName>
                </value>
                <value>
                    <fullName>INTÉGRATION DE SYSTÈMES</fullName>
                </value>
                <value>
                    <fullName>ALIGNEMENT TERRITORIAL</fullName>
                </value>
                <value>
                    <fullName>Licence limitée du Vendeur pour héberger les Données d’IQVIA dans l’application</fullName>
                </value>
                <value>
                    <fullName>COMMUNICATION DIRECTE AUX PRESCRIPTEURS ET AUX ORGANISATIONS DE SOINS DE SANTÉ</fullName>
                </value>
                <value>
                    <fullName>ANALYSE DE SEGMENTATION DE MARCHÉ</fullName>
                </value>
                <value>
                    <fullName>ÉTUDE DE MARCHÉ PRIMAIRE</fullName>
                </value>
                <value>
                    <fullName>ANALYSE DU CYCLE DE VIE DU PRODUIT</fullName>
                </value>
                <value>
                    <fullName>OPTIMISATION DE MIX PROMOTIONNEL</fullName>
                </value>
                <value>
                    <fullName>ÉVALUATION PROMOTIONNELLE DU RETOUR SUR INVESTISSEMENT</fullName>
                </value>
                <value>
                    <fullName>RECHERCHE QUALITATIVE</fullName>
                </value>
                <value>
                    <fullName>EXÉCUTION DE L’ÉCHANTILLONNAGE</fullName>
                </value>
                <value>
                    <fullName>ANALYSE DES MÉDIAS SOCIAUX</fullName>
                </value>
                <value>
                    <fullName>GESTION DES DONNÉES DE RÉFÉRENCE - INTENDANCE, GOUVERNANCE, SERVICES DE MNTN</fullName>
                </value>
                <value>
                    <fullName>ANALYTIQUE DES PROGRAMMES MEDICARE ET/OU MEDICAID.</fullName>
                </value>
                <value>
                    <fullName>RÉSULTATS / RECHERCHE SUR LES PATIENTS</fullName>
                </value>
                <value>
                    <fullName>ÉVALUATION DU MARCHÉ DES MÉDICAMENTS EN VENTE LIBRE (MVL)</fullName>
                </value>
                <value>
                    <fullName>COMMERCE PARALLÈLE / ÉTUDES TRANSFRONTALIÈRES</fullName>
                </value>
                <value>
                    <fullName>CHEMINEMENT DU PATIENT</fullName>
                </value>
                <value>
                    <fullName>TABLEAUX DE BORD DES PERFORMANCES / BI</fullName>
                </value>
                <value>
                    <fullName>PROFILAGE ORGANISATIONNEL DES MÉDECINS</fullName>
                </value>
                <value>
                    <fullName>ÉVALUATION DES CAMPAGNES PROMOTIONNELLES DES MÉDECINS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TPA_Purpose_Picklist_Apttus_Ja__c</fullName>
        <label>TPA Purpose Picklist Apttus Ja</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>本件ブランド評価</fullName>
                </value>
                <value>
                    <fullName>競合他社の情報分析</fullName>
                </value>
                <value>
                    <fullName>コンプライアンス率及び継続率に関する分析</fullName>
                </value>
                <value>
                    <fullName>本件契約戦略</fullName>
                </value>
                <value>
                    <fullName>法的又は行政目的での専門家による分析</fullName>
                </value>
                <value>
                    <fullName>ホスピタル・スピルオーバー分析</fullName>
                </value>
                <value>
                    <fullName>IDNセグメンテーション</fullName>
                </value>
                <value>
                    <fullName>本件インセンティブ報酬の処理</fullName>
                </value>
                <value>
                    <fullName>発売管理及び計画</fullName>
                </value>
                <value>
                    <fullName>本件ライセンス分析</fullName>
                </value>
                <value>
                    <fullName>本件市場予測</fullName>
                </value>
                <value>
                    <fullName>市場セグメンテーション分析</fullName>
                </value>
                <value>
                    <fullName>本件訪問計画</fullName>
                </value>
                <value>
                    <fullName>請求プロセス及びリベート</fullName>
                </value>
                <value>
                    <fullName>医薬品販売業務受託機関（CSO）</fullName>
                </value>
                <value>
                    <fullName>企業ポートフォリオ分析</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>データクレンジング</fullName>
                </value>
                <value>
                    <fullName>データ統合</fullName>
                </value>
                <value>
                    <fullName>本件データマート</fullName>
                </value>
                <value>
                    <fullName>本件処方者に対する直接的な連絡</fullName>
                </value>
                <value>
                    <fullName>本件疫学／薬剤疫学調査</fullName>
                </value>
                <value>
                    <fullName>医療経済評価（HEOR）</fullName>
                </value>
                <value>
                    <fullName>マネージドケア分析</fullName>
                </value>
                <value>
                    <fullName>マスターデータ管理</fullName>
                </value>
                <value>
                    <fullName>メディケア及びメディケードに関するアナリティクス</fullName>
                </value>
                <value>
                    <fullName>アウトカム／患者調査</fullName>
                </value>
                <value>
                    <fullName>一般用 (OTC)市場評価</fullName>
                </value>
                <value>
                    <fullName>並行貿易／クロスボーダー研究</fullName>
                </value>
                <value>
                    <fullName>本件ペイシェントジャーニー</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TPA_Purpose_Picklist_Apttus__c</fullName>
        <label>TPA Purpose Picklist Apttus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APLD Study</fullName>
                </value>
                <value>
                    <fullName>Arbitration / Litigation Analysis</fullName>
                </value>
                <value>
                    <fullName>Brand Assessment</fullName>
                </value>
                <value>
                    <fullName>Call Planning</fullName>
                </value>
                <value>
                    <fullName>Claims Process and Rebates</fullName>
                </value>
                <value>
                    <fullName>Commercial Ops Outsourcing</fullName>
                </value>
                <value>
                    <fullName>Comparative Health Economic Evaluation</fullName>
                </value>
                <value>
                    <fullName>Competitive Intelligence Assessment</fullName>
                </value>
                <value>
                    <fullName>Compliance &amp; Persistence Analysis</fullName>
                </value>
                <value>
                    <fullName>Consumer Health</fullName>
                </value>
                <value>
                    <fullName>Contract Sales Organization</fullName>
                </value>
                <value>
                    <fullName>Contract Strategy</fullName>
                </value>
                <value>
                    <fullName>Corporate Portfolio Analysis</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Dashboard Reporting</fullName>
                </value>
                <value>
                    <fullName>Data Cleansing</fullName>
                </value>
                <value>
                    <fullName>Data Comparison and Evaluation</fullName>
                </value>
                <value>
                    <fullName>Data Hosting – No Reports or Analytics</fullName>
                </value>
                <value>
                    <fullName>Data Integration</fullName>
                </value>
                <value>
                    <fullName>Data Integration or Comparison</fullName>
                </value>
                <value>
                    <fullName>Data Marts</fullName>
                </value>
                <value>
                    <fullName>Data Warehouse</fullName>
                </value>
                <value>
                    <fullName>Direct to Prescriber and Health Care Organizations Communications</fullName>
                </value>
                <value>
                    <fullName>Direct to Prescriber Communication</fullName>
                </value>
                <value>
                    <fullName>Epidemiology / Pharmacoepidemiology</fullName>
                </value>
                <value>
                    <fullName>Expert Analysis for Legal or Governmental Purposes</fullName>
                </value>
                <value>
                    <fullName>Franchise Analysis</fullName>
                </value>
                <value>
                    <fullName>HCO List Match Analysis</fullName>
                </value>
                <value>
                    <fullName>Health Economics Outcomes Research (HEOR)</fullName>
                </value>
                <value>
                    <fullName>Hospital Spillover Analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Doc Assembly Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Assembly Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>